--- a/estilos/style.css
+++ b/estilos/style.css
@@ -50,6 +50,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 3px;
 }
 .nav-item a{
     color: rgb(228, 218, 235);
@@ -68,7 +69,7 @@ main{
     width: 50vw;
 }
 
-.checkbox{
+.contenedorCategorias{
     margin: 30px;
     display: flex;
     flex-direction: row;
@@ -93,7 +94,7 @@ main{
     border: rgb(228, 218, 235) !important;
 }
 
-.search input{
+#contenedorSearch{
     width: 100%;
 }
 /* cards */
@@ -117,11 +118,8 @@ main{
     height:100vh;
     width: 100%;
     object-fit: cover;
+}
 
-}
-#ultima-card{
-    margin-bottom: 50px;
-}
 
 .card a:hover{
     background-color: rgb(139, 118, 118);
@@ -217,22 +215,27 @@ footer p{
     font-style: italic;
     font-weight: 200;
 }
-.contenedor-detalles{
-    width: 80vw;
-    height: 80vh;
+
+ .contenedorDetails{
+    width: 100%;
+    height: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: rgb(139, 118, 118);
+     background-color: rgb(139, 118, 118); 
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}  
+.contenedorDetails .card-body{
+    padding: 20px;
 }
 
 .contenedor-detalles img{
     width: 100%;
     height: 100%;
 }
+/* 
 
 /* pantallas medianas */
 @media only screen and (min-width: 576px) and (max-width: 1000px){
@@ -246,16 +249,16 @@ footer p{
         width: 40vw;
     }
 
-        .contenedor-card .contenedor-4-cards{
-        margin-right: 10px;
-        height: auto;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 50px;
-        margin-bottom: 10%;
+    .contenedor-card .contenedor-4-cards{
+    margin-right: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 50px;
+    margin-bottom: 10%;
     }
 
     .contenedor-card .card-text{
